// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots tree JSON tree 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0371 MuiGrid-spacing-xs-16-0394"
    >
      <div
        className="MuiGrid-item-0372 MuiGrid-grid-xs-12-0411 MuiGrid-grid-md-12-0439 tree-wrapper Tree-root-0369"
      >
        <div
          className="MuiList-root-0468"
        >
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="string"
              >
                 S 
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  name: @latticejs/tree
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="string"
              >
                 S 
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  version: 1.0.1-alpha.10
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="string"
              >
                 S 
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  license: MIT
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="string"
              >
                 S 
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  main: index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="string"
              >
                 S 
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  module: dist/es/dag.es.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="array"
              >
                [ ]
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  files
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="object"
              >
                { }
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  scripts
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="object"
              >
                { }
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  peerDependencies
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="object"
              >
                { }
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  devDependencies
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="object"
              >
                { }
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  dependencies
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="object"
              >
                { }
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  jest
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="object"
              >
                { }
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  publishConfig
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
          <li
            className="MuiListItem-container-0473"
          >
            <div
              className="MuiButtonBase-root-0483 MuiListItem-root-0472 MuiListItem-default-0475 MuiListItem-gutters-0479 MuiListItem-button-0480 MuiListItem-secondaryAction-0481"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-0486"
                type="string"
              >
                 S 
              </pre>
              <span
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499 MuiSwitchBase-root-0495 MuiCheckbox-root-0489 MuiCheckbox-colorSecondary-0494"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0498"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0512"
              >
                <span
                  className="MuiTypography-root-0518 MuiTypography-subheading-0525 MuiListItemText-primary-0515"
                >
                  gitHead: c1aad20555302fad47d2d61d1ff0f48f6d566083
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0543"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0550"
            >
              <button
                aria-label="Delete"
                className="MuiButtonBase-root-0483 MuiIconButton-root-0499"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-0504"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0505"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-0543"
                />
              </button>
            </div>
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-03 MuiGrid-spacing-xs-16-026"
    >
      <div
        className="MuiGrid-item-04 MuiGrid-grid-xs-12-043 MuiGrid-grid-md-12-071 tree-wrapper Tree-root-01"
      >
        <div
          className="MuiList-root-0100"
        >
          <li
            className="MuiListItem-container-0105"
          >
            <div
              className="MuiButtonBase-root-0115 MuiListItem-root-0104 MuiListItem-default-0107 MuiListItem-gutters-0111 MuiListItem-button-0112 MuiListItem-secondaryAction-0113"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-0119"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiButtonBase-root-0115 MuiIconButton-root-0136 MuiSwitchBase-root-0132 MuiCheckbox-root-0126 MuiCheckbox-colorSecondary-0131"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0141"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0119"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0135"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0142"
              >
                <span
                  className="MuiTypography-root-0148 MuiTypography-subheading-0155 MuiListItemText-primary-0145"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0173"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0180"
            />
          </li>
          <li
            className="MuiListItem-container-0105"
          >
            <div
              className="MuiButtonBase-root-0115 MuiListItem-root-0104 MuiListItem-default-0107 MuiListItem-gutters-0111 MuiListItem-button-0112 MuiListItem-secondaryAction-0113"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-0119"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiButtonBase-root-0115 MuiIconButton-root-0136 MuiSwitchBase-root-0132 MuiCheckbox-root-0126 MuiCheckbox-colorSecondary-0131"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0141"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0119"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0135"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0142"
              >
                <span
                  className="MuiTypography-root-0148 MuiTypography-subheading-0155 MuiListItemText-primary-0145"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0173"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0180"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree customized 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0187 MuiGrid-spacing-xs-16-0210"
    >
      <div
        className="MuiGrid-item-0188 MuiGrid-grid-xs-12-0227 MuiGrid-grid-md-12-0255 tree-wrapper Tree-root-0185"
      >
        <div
          className="MuiList-root-0284"
        >
          <li
            className="MuiListItem-container-0289"
          >
            <div
              className="MuiButtonBase-root-0299 MuiListItem-root-0288 MuiListItem-default-0291 MuiListItem-gutters-0295 MuiListItem-button-0296 MuiListItem-secondaryAction-0297"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-labelledby="apksi-logos-javascript-title"
                className="MuiListItemIcon-root-0302"
                height="1.5em"
                id="si-logos-javascript"
                preserveAspectRatio="xMidYMid"
                viewBox="0 0 256 256"
                width="1.5em"
              >
                <title
                  id="apksi-logos-javascript-title"
                >
                  logo of javascript
                </title>
                <path
                  d="M0 0h256v256H0V0z"
                  fill="#F7DF1E"
                />
                <path
                  d="M67.312 213.932l19.59-11.856c3.78 6.701 7.218 12.371 15.465 12.371 7.905 0 12.89-3.092 12.89-15.12v-81.798h24.057v82.138c0 24.917-14.606 36.259-35.916 36.259-19.245 0-30.416-9.967-36.087-21.996M152.381 211.354l19.588-11.341c5.157 8.421 11.859 14.607 23.715 14.607 9.969 0 16.325-4.984 16.325-11.858 0-8.248-6.53-11.17-17.528-15.98l-6.013-2.58c-17.357-7.387-28.87-16.667-28.87-36.257 0-18.044 13.747-31.792 35.228-31.792 15.294 0 26.292 5.328 34.196 19.247L210.29 147.43c-4.125-7.389-8.591-10.31-15.465-10.31-7.046 0-11.514 4.468-11.514 10.31 0 7.217 4.468 10.14 14.778 14.608l6.014 2.577c20.45 8.765 31.963 17.7 31.963 37.804 0 21.654-17.012 33.51-39.867 33.51-22.339 0-36.774-10.654-43.819-24.574"
                />
              </svg>
              <span
                className="MuiButtonBase-root-0299 MuiIconButton-root-0313 MuiSwitchBase-root-0309 MuiCheckbox-root-0303 MuiCheckbox-colorSecondary-0308"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0318"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0319"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0312"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0326"
              >
                <span
                  className="MuiTypography-root-0332 MuiTypography-subheading-0339 MuiListItemText-primary-0329"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0357"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0364"
            />
          </li>
          <li
            className="MuiListItem-container-0289"
          >
            <div
              className="MuiButtonBase-root-0299 MuiListItem-root-0288 MuiListItem-default-0291 MuiListItem-gutters-0295 MuiListItem-button-0296 MuiListItem-secondaryAction-0297"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-0319"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiButtonBase-root-0299 MuiIconButton-root-0313 MuiSwitchBase-root-0309 MuiCheckbox-root-0303 MuiCheckbox-colorSecondary-0308"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-0318"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-0319"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-0312"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-0326"
              >
                <span
                  className="MuiTypography-root-0332 MuiTypography-subheading-0339 MuiListItemText-primary-0329"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-0357"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-0364"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;
